fixed scrollbar again

--- a/style/custom.css
+++ b/style/custom.css
@@ -308,3 +308,7 @@ INDEX (b)
 	margin-right: auto;
 }
 	
+.container-fluid{
+	padding-right: 0px;
+	padding-left: 0px;
+}
